BUG-471: Added overflow-y:auto and -webkit-overflow-scrolling:touch to .frame

--- a/sass/web.site/modules/centerpage/_frame.sass
+++ b/sass/web.site/modules/centerpage/_frame.sass
@@ -6,6 +6,8 @@ $additional-margin: $page-padding * 2
 	margin: $vertical-space (-$page-padding)
 	padding-bottom: rem(460px)
 	position: relative
+	-webkit-overflow-scrolling: touch
+	overflow-y: auto
 	+respond-min($break-tablet-min)
 		margin-left: 0
 		margin-right: 0
